--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "seed": "npx ts-node scripts/seed.ts"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "@types/uuid": "^10.0.0",
     "aws-cdk": "2.1029.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -21,7 +23,10 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.896.0",
     "aws-cdk-lib": "2.214.0",
-    "constructs": "^10.0.0"
+    "aws-lambda": "^1.0.7",
+    "constructs": "^10.0.0",
+    "uuid": "^13.0.0"
   }
 }
