feat: implement ImportServiceStack with S3, Lambda functions, and API Gateway for CSV import functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-*.js
+# Compiled output
+dist/
+
+# Keep specific JS files
 !jest.config.js
+
+# Type definitions from compilation
 *.d.ts
+
 node_modules
 
 # CDK asset staging directory
