--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "aws_backend",
   "version": "0.1.0",
   "bin": {
-    "aws_backend": "bin/aws_backend.js"
+    "aws_backend": "dist/bin/aws_backend.js"
   },
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist",
+    "build:clean": "npm run clean && npm run build",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
@@ -17,6 +19,7 @@
     "@types/node": "22.7.9",
     "@types/uuid": "^10.0.0",
     "aws-cdk": "2.1029.1",
+    "aws-sdk-mock": "^6.2.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -24,9 +27,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.896.0",
+    "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
     "aws-cdk-lib": "2.214.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
+    "csv-parser": "^3.2.0",
     "uuid": "^13.0.0"
   }
 }
