--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.896.0",
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/client-sns": "^3.901.0",
+    "@aws-sdk/client-sqs": "^3.901.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "aws-cdk-lib": "2.214.0",
     "aws-lambda": "^1.0.7",
