--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/uuid": "^10.0.0",
     "aws-cdk": "2.1029.1",
     "aws-sdk-mock": "^6.2.1",
+    "esbuild": "^0.25.10",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -35,6 +36,6 @@
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
     "csv-parser": "^3.2.0",
-    "uuid": "^13.0.0"
+    "uuid": "^11.0.0"
   }
 }
