--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
     "csv-parser": "^3.2.0",
-    "uuid": "^11.0.0"
+    "dotenv": "^17.2.3",
+    "uuid": "^13.0.0"
   }
 }
